# vscode_project_demo

./: LICENSE  README.md
gtk_demo/: CMakeLists.txt  main.c
gtkmm_demo/: CMakeLists.txt  hw.cc  hw.h  main.cc
qt_demo/resource/qss/: label.qss
qt_demo/src/widgets/: video_widget.cpp  video_widget.h
